src/tests/snapshots/niri__tests__window_opening__check_target_size@fsF-dwP0.25-wfsBN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: BN\nconfig:\nwindow-rule {\n    open-fullscreen false\n    default-column-width { proportion 0.25; }\n}"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 800 × 600, states: []

post-map configures:
size: 1264 × 704, bounds: 1264 × 704, states: [Activated]
